Fixed overflowing redeem list.
git-svn-id: https://develop.eng.uts.edu.au/projects/personal/sahara/svn/SchedServer/trunk@3854 7ee224fa-57ca-4419-87f9-1f4314938d77

--- a/Permissions/META-INF/web/css/permissions.css
+++ b/Permissions/META-INF/web/css/permissions.css
@@ -631,7 +631,10 @@
 
 #perm-redeemuserslist {
 	width: 200px;
+	height: 240px;
 	float: right;
+	overflow-y: auto;
+	list-style: disc inside none;
 }
 
 #perm-redeemuserslist .ui-state-highlight {
